--- a/package.json
+++ b/package.json
@@ -7,13 +7,34 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "author": "",
+  "author": "boredMgr",
   "license": "ISC",
-  "dependencies": {
+  "devDependencies": {
     "body-parser": "^1.15.1",
+    "browserify": "^13.0.0",
     "express": "^4.13.4",
+    "gulp": "^3.9.0",
+    "gulp-concat": "^2.6.0",
+    "gulp-connect": "^2.3.1",
+    "gulp-eslint": "^1.1.1",
+    "gulp-open": "^1.0.0",
     "mongoose": "^4.4.20",
     "morgan": "^1.7.0",
-    "q": "^1.4.1"
+    "q": "^1.4.1",
+    "reactify": "^1.1.1",
+    "video.js": "^5.10.4",
+    "vinyl-source-stream": "^1.1.0"
+  },
+  "dependencies": {
+    "bootstrap": "^3.3.6",
+    "flux": "^2.0.3",
+    "history": "^1.17.0",
+    "jquery": "^2.2.0",
+    "lodash": "^4.0.0",
+    "object-assign": "^4.0.1",
+    "react": "^0.13.3",
+    "react-router": "^0.13.3",
+    "toastr": "^2.1.2",
+    "superagent": "latest"
   }
 }
