--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "lodash": "^4.0.0",
     "object-assign": "^4.0.1",
     "react": "^0.13.3",
+    "react-rating": "^0.3.0",
     "react-router": "^0.13.3",
-    "toastr": "^2.1.2",
-    "superagent": "latest"
+    "superagent": "latest",
+    "toastr": "^2.1.2"
   }
 }
