modified:   client/actions/initializeActions.js 	deleted:    client/actions/videoActions.js 	deleted:    client/api/videoApi.js 	deleted:    client/api/videoData.js 	modified:   client/components/app.js 	modified:   client/components/auth/authHandler.js 	modified:   client/components/homePage.js 	deleted:    client/components/video/video.css 	deleted:    client/components/video/videoCard.js 	deleted:    client/components/video/videoDesc.js 	deleted:    client/components/video/videoDetails.js 	deleted:    client/components/video/videoList.js deleted:    client/components/video/videoPlayer.js

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "lodash": "^4.0.0",
     "object-assign": "^4.0.1",
     "react": "^15.2.0",
+    "react-dom": "^15.2.0",
     "react-router": "2.5.2",
     "superagent": "latest",
     "toastr": "^2.1.2"
