modified:   .gitignore 	modified:   client/components/app.js 	modified:   client/components/auth/authHandler.js 	new file:   client/components/client.css 	new file:   client/components/common/home.js 	new file:   client/components/common/navLink.js 	modified:   client/components/videos/videoPlayer.js 	modified:   client/routes.js 	modified:   gulpfile.js 	modified:   package.json

--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
   "dependencies": {
     "bootstrap": "^3.3.6",
     "flux": "^2.0.3",
-    "history": "^1.17.0",
     "jquery": "^2.2.0",
     "lodash": "^4.0.0",
     "object-assign": "^4.0.1",
@@ -36,6 +35,7 @@
     "react-dom": "^15.2.0",
     "react-router": "2.5.2",
     "superagent": "latest",
-    "toastr": "^2.1.2"
+    "toastr": "^2.1.2",
+    "connect-history-api-fallback" : "latest"
   }
 }
