--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "author": "boredMgr",
   "license": "ISC",
   "devDependencies": {
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "babelify": "^7.3.0",
     "body-parser": "^1.15.1",
     "browserify": "^13.0.0",
     "express": "^4.13.4",
@@ -18,18 +21,20 @@
     "gulp-connect": "^2.3.1",
     "gulp-eslint": "^1.1.1",
     "gulp-open": "^1.0.0",
+    "gulp-sourcemaps": "^1.6.0",
     "mongoose": "^4.4.20",
     "morgan": "^1.7.0",
     "q": "^1.4.1",
     "reactify": "^1.1.1",
+    "superagent": "^2.0.0",
     "video.js": "^5.10.4",
+    "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
   "dependencies": {
     "bootstrap": "^3.3.6",
     "flux": "^2.0.3",
     "history": "^1.17.0",
-    "jquery": "^2.2.0",
     "lodash": "^4.0.0",
     "object-assign": "^4.0.1",
     "react": "^0.13.3",
